# spaceman

./: .gitignore  CMakeLists.txt  Makefile  Spaceman.workspace  autogen.sh  cmakehelp  compile_flags.txt  configure  configure.ac  readme.md
docs/: Doxyfile
docs/html/: annotated.html  build_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c85d3e3c5052e9ad9ce18c6863244a25.html  files.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  index.html  main_8h_source.html  space__package_8h.html  space__package_8h_source.html  structcompiler-members.html  structcompiler.html  structcompiler__list-members.html  structcompiler__list.html  structspace__package-members.html  structspace__package.html
docs/html/search/: all_0.js  all_1.js  all_2.js  classes_0.js  classes_1.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  searchdata.js  typedefs_0.js
docs/latex/: annotated.tex  files.tex  refman.tex  space__package_8h.tex  structcompiler.tex  structcompiler__list.tex  structspace__package.tex
src/: Makefile.am  main.c  main.h  spaceman_package.c  spaceman_package.h
src/lib/: build.c  build.h  space_package.c  space_package.h  spaceman_package.c  spaceman_package.h
